--- a/css-1/estilos.css
+++ b/css-1/estilos.css
@@ -10,49 +10,39 @@ body{
     background: linear-gradient(0deg, rgba(9,103,121,1) 60%, rgba(12,177,212,0.8799894957983193) 94%);
 }
 
-.encabezado{
-    background-image: url(../multimedia/imagen-21.jpg);
-    background-position:50%;
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    height: 300px;
-}
-.imagenlogo{
-    animation-name: logo;
-    animation-iteration-count: infinite;
-    animation-duration: 8s;
-}
-@keyframes logo{
-    from{
-        transform:rotatey(0deg)
-    }
-    to{
-        transform:rotatey(360deg);
-    }
-}
 
-header div{
-    display:flex;
-    height: 120%;
-    position: relative;
-    top: 10px;
+.encabezadoIndex{
+    background-image: url(../multimedia/imagen-21-1.jpg);
+    background-position: center;
+    height: 680px;
+    opacity: 0.7;
+    display: flex;
+    flex-direction:row;
+    justify-content:start;
+    align-content:center;
 }
 header h1{
     font-family: Helvetica;
-    font-size: 30px;
+    font-size: 80px;
     font-weight: bold;
-    padding: 20px;
-    position: absolute;
-    top:240px;
+    color:black;
+    display: flex;
+    margin-top: 150px;
+}
+.imagenLogo{
+    transform:scale(0.8);
+    display: flex;
+    margin-top: 50px;
 }
 footer{
-    background-color: rgb(39, 38, 38);
+    background-color:black;
     font-family: Helvetica;
     color: white;
 }
 footer ul{
     list-style: none;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 footer span{
     color: red;
@@ -69,135 +59,55 @@ footer span{
 }
 
 /* Media Queris para encabezado y navegador */
+@media screen and (min-width:320px) and (max-width:480px){
+    header{
+        background-image: url(../multimedia/imagen-21-1.jpg);
+        background-position: 10%;
+        height: 500px;
+        opacity: 0.7;
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+        align-content:center;
+    }
+    header h1{
+        font-family: Helvetica;
+        font-size: 30px;
+        font-weight: bold;
+        color:black;
+        text-align: center;
+        display: flex;
+        margin-top: 15px;
+}
+.imagenLogo{
+    display: flex;
+    text-align: center;
+}
+}
 
-@media screen and (min-width:320px) and (max-width:479px){
-    .encabezado{
-        background-position:50%;
-        display: flex;
-        justify-content:center;
-        justify-items: center;
-        align-items:center;
-        height: 250px;
-    }
-    header div{
-        display:flex;
-        height: 80%;
-        position: relative;
-        top: 10px;
-    }
-    header h1{
-        display: flex;
-        font-family: Helvetica;
-        font-size: 18px;
-        font-weight: bold;
-        text-align: center;
-        padding: 20px;
-        position: absolute;
-        top:170px;
-    }
-}
-@media screen and (min-width:480px) and (max-width:600px){
-    .encabezado{
-        background-position:50%;
-        display: flex;
-        justify-content:center;
-        justify-items: center;
-        align-items:center;
-        height: 250px;
-    }
-    header div{
-        display:flex;
-        height: 80%;
-        position: relative;
-        top: 10px;
-    }
-    header h1{
-        display: flex;
-        font-family: Helvetica;
-        font-size: 18px;
-        font-weight: bold;
-        text-align: center;
-        padding: 20px;
-        position: absolute;
-        top:170px;
-    }
-}
-@media screen and (min-width:601px) and (max-width:768px){
-    .encabezado{
-        background-position:50%;
-        display: flex;
-        justify-content:center;
-        justify-items: center;
-        align-items:center;
-        height: 250px;
-    }
-    header div{
-        display:flex;
-        height: 80%;
-        position: relative;
-        top: 10px;
-    }
-    header h1{
-        display: flex;
-        font-family: Helvetica;
-        font-size: 18px;
-        font-weight: bold;
-        text-align: center;
-        padding: 20px;
-        position: absolute;
-        top:170px;
-    }
-}
-@media screen and (min-width:769px) and (max-width:1024px){
-    .encabezado{
-        background-position:50%;
-        display: flex;
-        justify-content:center;
-        justify-items: center;
-        align-items:center;
-        height: 250px;
-    }
-    header div{
-        display:flex;
-        height: 80%;
-        position: relative;
-        top: 10px;
-    }
-    header h1{
-        display: flex;
-        font-family: Helvetica;
-        font-size: 18px;
-        font-weight: bold;
-        text-align: center;
-        padding: 20px;
-        position: absolute;
-        top:170px;
-    }
-}
 
 /* Estilos específicos para página "Index.html" */
 
 .contenidoIndex{
-    margin: 20px 40px 20px 40px;
-    padding: 20px;          
+    background-color: rgb(32, 32, 32);     
     
 }
 .contenidoIndex__titulo{
+    text-align: left;
     font-family:Helvetica;
     font-size: 40px;
     font-weight: bold;
+    color: white;
     grid-area: contenidoIndex__titulo;
-    padding: 0px;
+    margin-top: 20px;
 
 }
 .contenidoIndex{
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto auto auto;
+    grid-template-columns: 0.5fr 0.5fr;
+    grid-template-rows: auto auto;
     grid-template-areas: "contenidoIndex__titulo contenidoIndex__titulo "
-                         "parrafoNosotros parrafoNosotros"
-                         "imagen-10 imagen-09"
-                         "imagen-02 imagen-20";
+                         "parrafoNosotros imagen-09";
     justify-content:center;
     justify-items:center;
     align-items: center;
@@ -205,30 +115,17 @@ footer span{
 .parrafoNosotros{
     grid-area: parrafoNosotros;
     font-family: Helvetica;
+    color:blue;
     font-size: 20px;
     text-align: justify;
-    margin-bottom: 75px;
-}
-.imagen-10{
-    transform:scale(1.6);
-    grid-area: imagen-10;
-    margin-bottom: 120px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 .imagen-09{
-    transform:scale(1.6);
+    transform:scale(2);
     grid-area: imagen-09;
-    margin-bottom: 120px;
 }
-.imagen-02{  
-    transform:scale(1.6); 
-    grid-area: imagen-02;
-    margin-bottom: 50px;
-}
-.imagen-20{
-    transform:scale(1.5);
-    grid-area: imagen-20;
-    margin-bottom: 50px;
-}
+
 
 /* Media Queris para el contenido de Nosotros */
 
@@ -236,47 +133,27 @@ footer span{
     .contenidoIndex{
         display: grid;
         grid-template-columns: auto;
-        grid-template-rows: auto auto auto auto auto auto;
+        grid-template-rows: auto auto auto;
         grid-template-areas: "contenidoIndex__titulo"
-                             "parrafoNosotros"
-                             "imagen-10" 
-                             "imagen-09"
-                             "imagen-02" 
-                             "imagen-20";
+                             "parrafoNosotros" 
+                             "imagen-09";
         justify-content:center;
         justify-items:center;
         align-items: center;
     }
-    .imagen-02{
-        margin-bottom: 115px;
-    }
     .contenidoIndex__titulo{
         text-align: center;
     }
+    .imagen-09{
+        transform:scale(0.9);
+    }
+    .parrafoNosotros{
+        font-family: Helvetica;
+        font-size: 15px;
+    }
+    
 }
 
-@media screen and (min-width:769px) and (max-width:1024px){
-    .contenidoIndex{
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: auto auto auto auto auto auto;
-        grid-template-areas: "contenidoIndex__titulo"
-                             "parrafoNosotros"
-                             "imagen-10" 
-                             "imagen-09"
-                             "imagen-02" 
-                             "imagen-20";
-        justify-content:center;
-        justify-items:center;
-        align-items: center;
-    }
-    .imagen-02{
-        margin-bottom: 115px;
-    }
-    .contenidoIndex__titulo{
-        text-align: center;
-    }
-}
 
 
 
